🐛 fix workflow permission definition not effective immediately

--- a/src/Passingwind.Abp.ElsaModule.Domain.Shared/Localization/ElsaModule/en.json
+++ b/src/Passingwind.Abp.ElsaModule.Domain.Shared/Localization/ElsaModule/en.json
@@ -1,9 +1,9 @@
 {
   "culture": "en",
   "texts": {
-    "WorkflowDefinition.NameExists": "Workflow definition name '{name}' exists",
+    "ElsaModule:WorkflowDefinition.NameExists": "Workflow definition name '{name}' exists",
 
-    "Permission:ElsaModule": "Workflow(Elsa) management",
+    "Permission:ElsaModule": "Workflow management",
 
     "Permission:Create": "Create",
     "Permission:Update": "Edit",
