🚀 add global code and activity #48

--- a/src/Passingwind.Abp.ElsaModule.Domain.Shared/Localization/ElsaModule/en.json
+++ b/src/Passingwind.Abp.ElsaModule.Domain.Shared/Localization/ElsaModule/en.json
@@ -1,7 +1,8 @@
 ﻿{
   "culture": "en",
   "texts": {
-    "ElsaModule:WorkflowDefinition.NameExists": "Workflow definition name '{name}' exists",
+    "ElsaModule:Error:0101": "Workflow definition name '{name}' exists",
+    "ElsaModule:Error:0501": "Global code name is exists",
 
     "Permission:ElsaModule": "Workflow management",
 
